- Purchasing a plugin for a stack of gear with more than one item now properly multiplies the expenditure of the purchase by the size of the stack.
- Fixed issues where cyberlimbs and modular connectors would not properly block competing modular connectors.
- If Chummer is unable to update registry entries, it will now display a warning that it cannot update registry entries instead of crashing.

Data Changes:
- Consolidated all German Data Changes custom data into a single German Data Changes entry.
- Individualized Alchemy, Disenchanting, Power, and Spellcasting focuses now properly apply their bonuses. Existing characters with these focuses will need to re-add them or reapply improvements to see any changes. Fixes #4340.
- Whisper of Bones now properly requires Necromancy.
- Injection Darts no longer display a weapon category selection screen and then crash Chummer. Fixes #4352.

Changed/New Strings:
- String_ContactPoints
- String_KnowledgePoints
- String_Skull
- String_Torso
- String_Arms
- String_Legs
- Message_CharacterCustomDataWarning
- MessageTitle_CharacterCustomDataWarning
- Menu_Main_Options
- Menu_Main_Character_Options
- Menu_Main_Update
- Menu_Main_Restart
- Menu_Main_ChummerWiki
- Menu_Main_ChummerDiscord
- Menu_Main_DumpshockThread
- Menu_Main_Translator
- Menu_Main_HeroLabImporter
- String_Save
- String_SaveAs
- Tip_SkillsKnowledgeSkills
- Title_Options
- Tab_Options_CustomData
- Tab_Options_CustomDataDirectories
- Tab_Options_Basic
- Label_Options_CustomDataDirectories
- Checkbox_Options_LiveUpdateCleanCharacterFiles
- Label_Options_DefaultCharacterOption
- Title_CharacterOptions
- String_Rename
- Label_CharacterOptions_CharacterCreationSettings
- Label_CharacterOptions_Printing
- Label_CharacterOptions_OptionsOfficialRules
- Label_CharacterOptions_Cyberlimbs
- Label_CharacterOptions_DecimalsAndRounding
- Label_CharacterOptions_CustomData
- Button_ChangeCustomDataEntries
- Label_CharacterOptions_Combat
- Label_CharacterOptions_MagicAndResonance