@@ -305,7 +305,11 @@ namespace Chummer.Backend.Equipment
                             AllowCancel = false
                         })
                         {
-                            frmPickNumber.ShowDialog(Program.MainForm);
+                            if (frmPickNumber.ShowDialog(Program.MainForm) == DialogResult.Cancel)
+                            {
+                                _guiID = Guid.Empty;
+                                return;
+                            }
                             _strCost = frmPickNumber.SelectedValue.ToString(GlobalOptions.InvariantCultureInfo);
                         }
                     }
@@ -353,7 +357,10 @@ namespace Chummer.Backend.Equipment
                             frmPickArmorMod.ShowDialog(Program.MainForm);
 
                             if (frmPickArmorMod.DialogResult == DialogResult.Cancel)
+                            {
+                                _guiID = Guid.Empty;
                                 return;
+                            }
 
                             // Locate the selected piece.
                             XmlNode objXmlMod = objXmlDocument.SelectSingleNode("/chummer/mods/mod[id = \"" + frmPickArmorMod.SelectedArmorMod + "\"]");
