@@ -359,9 +359,11 @@ namespace Chummer.Backend.Equipment
                 })
                 {
                     frmSelect.SetGeneralItemsMode(lstQualities);
-                    frmSelect.ShowDialog(Program.MainForm);
-                    if (frmSelect.DialogResult == DialogResult.Cancel)
+                    if (frmSelect.ShowDialog(Program.MainForm) == DialogResult.Cancel)
+                    {
+                        _guiID = Guid.Empty;
                         return;
+                    }
 
                     objLifestyleQualityNode =
                         objXmlDocument.SelectSingleNode("/chummer/qualities/quality[id = \"" + frmSelect.SelectedItem +
